objects/BMCServiceDesk__BMC_HardwareSystemComponent__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PNPDeviceID__c</fullName>
        <label>PNP Device ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PowerManagementCapabilities__c</fullName>
        <label>Power Management Capabilities</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Supported</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Saving Modes Entered Automatically</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power State Settable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Cycling Supported</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Timed Power On Supported</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SystemAvailability__c</fullName>
        <label>System Availability</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Running/Full Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off Duty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Degraded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Installed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Install Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Save - Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Save - Low Power Mode</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Save - Standby</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Cycle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>